--- a/project3.html
+++ b/project3.html
@@ -5,13 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media as Medium</title>
-    <link rel="stylesheet" href="./mainproject03.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <h4 class="logo">Medium alike</h1>
-    <div id="general-content">
+    <div id="main">
       <h1 class="header">Hello, World!</h1>
-      <div id="sub-content"></div>
+      <div id="content">
+        <div id="content-element1"> 
+          <div class="element">
+           <div class="elementContent">
+             <div class="information">
+               <img src="./assets/img/avatar.png"/>
+               <p class="content-header">
+                 <span id="id-span2"> </span> <span class="gray-text">in</span> <span id="id-span3"></span> • <span id ="id-span4" class="gray-text"> </span>
+                 </p>
+             </div>
+             <div class="textContent">
+               <h1 id="id-heading5" class="article" data-article-id= ""> </h1>
+               <p id="paragraph11" class="content-paragraph"> </p>
+             </div>
+             <div class="content-footer">
+               <div class="content-footer-left">
+                 <div id="div-115" class="language"> </div>
+                 <p>
+                   <span class="gray-text">12 min read</span> • <span id = "id-span1" class="gray-text"> </span>
+                 </p>
+               </div>
+               <div class="squares">
+                 <div class="square"></div>
+                 <div class="square"></div>
+                 <div class="square"></div>
+               </div>
+             </div>
+           </div>
+           <div><img id="id-img11" src="" class="imgContent" /></div>
+         </div>
+         </div>
+     
+      </div>
     </div>
 
     
@@ -30,6 +62,6 @@
         <div class="end-footer">Made with ✨❤️ at nFactorial in 2022.</div>
     </div>
 
-    <script src="./indexproject3.js"></script>
+    <script src="./indexproject3Lastversion.js"></script>
 </body>
 </html>
